<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_notes">

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.example.notekeeper.ui.note.NoteFragment"
        android:label="@string/menu_item_note"
        tools:layout="@layout/fragment_note" />

    <fragment
        android:id="@+id/nav_courses"
        android:name="com.example.notekeeper.ui.course.CourseFragment"
        android:label="@string/menu_item_course"
        tools:layout="@layout/fragment_course" />

</navigation>